Removed alertify... not worth it to get working

--- a/css/alertify.core.css
+++ b/css/alertify.core.css
@@ -24,7 +24,7 @@
 .alertify-cover {
 	position: fixed; z-index: 99999;
 	top: 0; right: 0; bottom: 0; left: 0;
-	background-color:white;
+	background-color:#555555;
 	filter:alpha(opacity=0);
 	opacity:0;
 }
